page header spacing fix

--- a/style.css
+++ b/style.css
@@ -994,6 +994,19 @@ article h4 {
 		margin-bottom: 18px;
 	}
 
+	.article-title h1, .article-title h2 {
+		text-align: left;
+		line-height: 45px;
+	}
+
+	.article-title article {
+		padding-bottom: 24px;
+	}
+
+	article {
+		padding-top: 24px;
+	}
+
 	/* END FOOTER STYLES */
 
 }
